--- a/index.html
+++ b/index.html
@@ -17,5 +17,10 @@
 </header>
 <body>
     <h1>Olá mundo</h1>
+    <p>Ola queridos, me chamo Maysa, mas pode me chamar de may,tenho 16 anos,(01/06/2008) estudo no ifsp, gosto bastante de treinar, me alimentar bem, e ganhar bastante musculo,
+        comer um docinho quando estou estressada, minha diversão e zuar com os colegas e arrumar a rotina sempre , adoro escutar musica, me deixa bem alegre, adoro conhecer novos lugares,
+    AMO me maquiar , gosto bastante de sair tambem ,as vezes tomo um vinho, particularmente e a unica bebida alcoolica que eu gosto, no meu tempo livre , assisto videos no youtube ,
+gosto de dorama tambem, sonho em viver um , algum dia, manifesto bastante meu futuro perfeito, hehe, estou comecendo uma religiao nova tambem (umbanda) te amo.<br>
+finalizo esse texto com uma musica para mim "i wanna be yours". </p>
 </body>
 </html>
