--- a/index.html
+++ b/index.html
@@ -22,5 +22,33 @@
     AMO me maquiar , gosto bastante de sair tambem ,as vezes tomo um vinho, particularmente e a unica bebida alcoolica que eu gosto, no meu tempo livre , assisto videos no youtube ,
 gosto de dorama tambem, sonho em viver um , algum dia, manifesto bastante meu futuro perfeito, hehe, estou comecendo uma religiao nova tambem (umbanda) te amo.<br>
 finalizo esse texto com uma musica para mim "i wanna be yours". </p>
+    <nav class="welcome">
+            <ul>
+                <center>
+                    <h1>
+                        C O N T A T O
+                    </h1>
+                </center>
+
+            </ul>
+        </nav>
+    </header>
+    <hr>
+    <nav class="Contato">
+        <h2>Contato</h2>
+        <form action="https://api.staticforms.xyz/submit" method="post">
+            <label>Nome</label>
+            <input type="text" name="name" placeholder="Digite seu nome" autocomplete="off">
+            <hr>
+            <label>Email</label>
+            <input type="text" name="name" placeholder="Insira seu email" autocomplete="off">
+            <hr>
+            <label>Mensagem</label><br>
+            <textarea name="message" cols="30" rows="10" placeholder="Qual sua mensagem?"></textarea>
+
+            <hr>
+            <button type="submit">Enviar</button>
+        </form>
+    </nav>
 </body>
 </html>
